Added loading for all books

--- a/src/globals.css
+++ b/src/globals.css
@@ -6,3 +6,9 @@ body{
 a{
     text-decoration: none;
 }
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
